--- a/modules/ROOT/partials/commands/math-cmds.adoc
+++ b/modules/ROOT/partials/commands/math-cmds.adoc
@@ -1,7 +1,7 @@
 [cols="1,3",options="header"]
 |===
 |Command |Description
-|Math |This command opens the {pluginname} dialog.
+|Math |This command opens the Math dialog.
 |===
 
 .Examples
