--- a/modules/ROOT/pages/editor-plugin-version.adoc
+++ b/modules/ROOT/pages/editor-plugin-version.adoc
@@ -4,22 +4,105 @@
 :keywords: tinymce, cloud, script, textarea, apiKey, hybrid
 
 [[specifying-the-tinymce-editor-version-deployed-from-cloud]]
-== Specifying the TinyMCE editor version deployed from Cloud
+== Specifying the {productname} Editor Version from the Cloud
 
-Use the URL provided to specify the {productname} version when deploying via {cloudname}. Refer to the xref:editor-and-features.adoc[{productname} editor via the {cloudname}] for more information.
-
-The following example is the default for loading {productname} {productmajorversion} via {cloudname}. Substitute 'no-api-key' with your api key in the examples below.
+To set the {productname} version when deploying from {cloudname}, use the following URL.
 
 [source,html,subs="attributes+"]
 ----
 <script src="{cdnurl}" referrerpolicy="origin"></script>
 ----
 
-This URL specifies the latest and quality assured release of {productname}.
+The example above shows the default way to load {productname} {productmajorversion} from {cloudname}.
 
-=== Selecting specific version numbers
+[TIP]
+Replace 'no-api-key' with your own API key. This URL ensures the most recent and verified version of {productname} is used.
 
-NOTE: All {cloudname} channels are based on the {enterpriseversion} version. For information on the latest version of the {cloudname} `{productmajorversion}` release channel, see: xref:release-notes.adoc[{productname} Release Notes]. For a list of changes that *may* be present in the {cloudname} testing channel, see: xref:changelog.adoc[{productname} Changelog].
+For more details, check out the xref:editor-and-features.adoc[{productname} editor via {cloudname}].
+
+[[specifying-a-self-hosted-deployment-of-plugins]]
+== Specifying a Self-Hosted Deployment of plugins
+
+When deploying {productname}, integrators have the choice to **self-host** premium plugins or load them from {companyname} Cloud which is referred to as Hybrid mode. Depending on your setup, a combination of both approaches can be used. For simplifying this process, {companyname} offers two configuration scripts:
+
+* `plugins.min.js`: This script configures {productname} to load all premium plugins from {companyname} Cloud, **defaulting** to the `latest` version in the selected cloud channel. You can specify different plugin versions if necessary, but it's generally best to use the latest versions for optimal performance and security.
+* `cloud-plugins.min.js`: This script allows loading of specific premium plugins from {companyname} Cloud, while self-hosting the rest. This approach is intended for edge cases, such as when you have custom plugins on your own servers and only need a few from {companyname} Cloud.
+
+=== Which Script Should You Use?
+
+==== Using `plugins.min.js`
+
+In most cases, using `plugins.min.js` is the correct choice. It provides the most flexibility and simplicity by ensuring all plugins are loaded from {companyname} Cloud. If you need to specify individual plugin versions, you can do so via query parameters.
+
+.Example
+[source,html]
+----
+<script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/7/plugins.min.js?mentions=3.0&powerpaste=6.0" referrerpolicy="origin"></script>
+----
+
+In this example, {productname} will attempt to load all premium plugins from {companyname} Cloud, with specified versions for the "mentions" and "powerpaste" plugins. The only disadvantage of `+plugins.min.js+`: to load only one plugin from the {cloudname} and the rest from a self-hosted deployment, *ALL* other plugins need to be added as query parameter with the version as `+sdk+`. When {cloudname} releases a new plugin, this will need to be updated.
+
+
+==== Using `cloud-plugins.min.js`
+
+Use `cloud-plugins.min.js` **only** if you have a specific reason to self-host some premium plugins while loading others from Tiny Cloud. This approach is more complex and requires you to specify which plugins to load from {companyname} Cloud.
+
+.Example
+[source,html]
+----
+<script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/7/cloud-plugins.min.js?mentions=3.0&powerpaste=6.0" referrerpolicy="origin"></script>
+----
+
+This example loads specific premium plugins from Tiny Cloud, with the rest assumed to be self-hosted. Unlike `plugins.min.js`, there is no need to specify a special version (like "sdk") for self-hosted plugins.
+
+[TIP]
+Specifying plugin versions is generally **not recommended**. {companyname} recommends using the latest versions to ensure compatibility and security. As the disadvantage of `+cloud-plugins.min.js+`: every plugin to be loaded from {cloudname} must be added to the query parameter.
+
+== Premium plugin versions available from Tiny Cloud
+
+While it is not recommended, but it is possible to specify different versions of each premium plugin to use with {productname}. Using the URL query parameters mentioned above, this can by used to specify the version of each premium plugin to load. This approach works with both the xref:editor-and-features.adoc[{productname} editor and premium plugins deployment via {cloudname}] or just the xref:features-only.adoc[premium plugins deployment from {cloudname}].
+
+The `+identifier+` of the plugin is used as a query parameter. This table summarises the possible options.
+
+[cols=",,",options="header"]
+|===
+|Plugin |Identifier |Supported Versions
+|xref:a11ychecker.adoc[Accessibility Checker] | `+a11ychecker+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/a11ychecker/available-versions[Versions]
+|xref:advanced-typography.adoc[Advanced Typography] | `+advtable+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/advtable/available-versions[Versions]
+|xref:ai.adoc[AI Assistant] | `+ai+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/ai/available-versions[Versions]
+|xref:casechange.adoc[Case Change] | `+casechange+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/casechange/available-versions[Versions]
+|xref:checklist.adoc[Checklist] | `+checklist+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/checklist/available-versions[Versions]
+|xref:introduction-to-tiny-comments.adoc[Comments] | `+tinycomments+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/tinycomments/available-versions[Versions]
+|xref:advcode.adoc[Enhanced Code Editor] | `+advcode+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/advcode/available-versions[Versions]
+|xref:introduction-to-mediaembed.adoc[Enhanced Media Embed] | `+mediaembed+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/mediaembed/available-versions[Versions]
+|xref:advtable.adoc[Enhanced Tables] | `+advtable+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/advtable/available-versions[Versions]
+|xref:exportword.adoc[Export to Word] | `+exportword+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/exportword/available-versions[Versions]
+|xref:exportpdf.adoc[Export to PDF] | `+exportpdf+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/exportpdf/available-versions[Versions]
+|xref:footnotes.adoc[Footnotes] | `+footnotes+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/footnotes/available-versions[Versions]
+|xref:formatpainter.adoc[Format Painter] | `+formatpainter+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/formatpainter/available-versions[Versions]
+|xref:inline-css.adoc[Inline CSS] | `+inlinecss+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/inline-css/available-versions[Versions]
+|xref:importword.adoc[Import from Word] | `+importword+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/importword/available-versions[Versions]
+|xref:editimage.adoc[Image Editing] | `+editimage+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/editimage/available-versions[Versions]
+|xref:linkchecker.adoc[Link Checker] | `+linkchecker+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/linkchecker/available-versions[Versions]
+|xref:markdown.adoc[Markdown] | `+markdown+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/markdown/available-versions[Versions]
+|xref:mentions.adoc[Mentions] | `+mentions+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/mentions/available-versions[Versions]
+|xref:mergetags.adoc[Merge Tags] | `+mergetags+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/mergetags/available-versions[Versions]
+|xref:moxiemanager.adoc[MoxieManager] | `+moxiemanager+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/moxiemanager/available-versions[Versions]
+|xref:pageembed.adoc[Page Embed] | `+pageembed+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/pageembed/available-versions[Versions]
+|xref:permanentpen.adoc[Permanent Pen] | `+permanentpen+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/permanentpen/available-versions[Versions]
+|xref:introduction-to-powerpaste.adoc[PowerPaste] | `+powerpaste+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/powerpaste/available-versions[Versions]
+|xref:revisionhistory.adoc[Revision History] | `+revisionhistory+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/revisionhistory/available-versions[Versions]
+|xref:introduction-to-tiny-spellchecker.adoc[Spell Checker] | `+tinymcespellchecker+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/tinymcespellchecker/available-versions[Versions]
+|xref:autocorrect.adoc[Spelling Autocorrect] | `+autocorrect+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/autocorrect/available-versions[Versions]
+|xref:advanced-templates.adoc[Templates] | `+templates+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/advanced-templates/available-versions[Versions]
+|xref:tableofcontents.adoc[Table of Contents] | `+tableofcontents+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/tableofcontents/available-versions[Versions]
+|xref:tinydrive-introduction.adoc[Tiny Drive] | `+tinydrive+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/tinydrive/available-versions[Versions]
+|===
+
+=== Understanding and selecting specific version numbers
+
+IMPORTANT
+All {cloudname} channels are based on the {enterpriseversion} version. For information on the latest version of the {cloudname} `{productmajorversion}` release channel, see: xref:release-notes.adoc[{productname} Release Notes]. For a list of changes that *may* be present in the {cloudname} testing channel, see: xref:changelog.adoc[{productname} Changelog].
 
 [#{productmajorversion}-{productmajorversion}-testing-and-{productmajorversion}-dev-release-channels]
 === {productmajorversion}, {productmajorversion}-testing, and {productmajorversion}-dev release channels
@@ -66,95 +149,3 @@ This channel deploys nightly builds of {productname}. This channel includes the 
 ----
 <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/{productmajorversion}-dev/tinymce.min.js" referrerpolicy="origin"></script>
 ----
-
-== Specifying the version of premium plugins deployed from Tiny Cloud
-
-Each {productname} version is bundled with a set of premium plugins, but it is possible to specify different versions of each premium plugin to use with {productname}. Use the URL query parameters to specify the version of each premium plugin to load. This approach works with both the xref:editor-and-features.adoc[{productname} editor and premium plugins deployment via {cloudname}] or just the xref:features-only.adoc[premium plugins deployment from {cloudname}].
-
-The `+identifier+` of the plugin is used as a query parameter. This table summarises the possible options.
-
-[cols=",,",options="header"]
-|===
-|Plugin |Identifier |Supported Versions
-|xref:a11ychecker.adoc[Accessibility Checker] |`+a11ychecker+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/a11ychecker/available-versions[Versions]
-|xref:advtable.adoc[Enhanced Tables] |`+advtable+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/advtable/available-versions[Versions]
-|xref:advanced-typography.adoc[Advanced Typography] |`+typography+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/advtable/available-versions[Versions]
-|xref:casechange.adoc[Case Change] |`+casechange+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/casechange/available-versions[Versions]
-|xref:checklist.adoc[Checklist] |`+checklist+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/checklist/available-versions[Versions]
-|xref:introduction-to-tiny-comments.adoc[Comments] |`+comments+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/tinycomments/available-versions[Versions]
-|xref:advcode.adoc[Enhanced Code Editor] |`+advcode+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/advcode/available-versions[Versions]
-|xref:introduction-to-mediaembed.adoc[Enhanced Media Embed] |`+mediaembed+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/mediaembed/available-versions[Versions]
-|xref:footnotes.adoc[Footnotes] |`+footnotes+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/footnotes/available-versions[Versions]
-|xref:formatpainter.adoc[Format Painter] |`+formatpainter+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/formatpainter/available-versions[Versions]
-|xref:inline-css.adoc[Inline CSS] |`+inlinecss+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/formatpainter/available-versions[Versions]
-|xref:editimage.adoc[Image Editing] |`+editimage+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/editimage/available-versions[Versions]
-|xref:linkchecker.adoc[Link Checker] |`+linkchecker+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/linkchecker/available-versions[Versions]
-|xref:mentions.adoc[Mentions] |`+mentions+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/mentions/available-versions[Versions]
-|xref:mergetags.adoc[Merge Tags] |`+mergetags+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/mergetags/available-versions[Versions]
-|xref:pageembed.adoc[Page Embed] |`+pageembed+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/pageembed/available-versions[Versions]
-|xref:permanentpen.adoc[Permanent Pen] |`+permanentpen+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/permanentpen/available-versions[Versions]
-|xref:introduction-to-powerpaste.adoc[PowerPaste] |`+powerpaste+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/powerpaste/available-versions[Versions]
-|xref:introduction-to-tiny-spellchecker.adoc[Spell Checker] |`+tinymcespellchecker+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/tinymcespellchecker/available-versions[Versions]
-|xref:autocorrect.adoc[Spelling Autocorrect] |`+autocorrect+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/autocorrect/available-versions[Versions]
-|xref:tableofcontents.adoc[Table of Contents] |`+tableofcontents+`|http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/tableofcontents/available-versions[Versions]
-|xref:tinydrive-introduction.adoc[Tiny Drive] |`+tinydrive+` |http://cdn.tiny.cloud/1/no-api-key/tinymce-plugins/tinydrive/available-versions[Versions]
-|===
-
-=== Specifying versions for the editor and premium plugin deployment
-
-When deploying xref:editor-and-features.adoc[both the editor and premium plugins from {cloudname}], {productname} will load the premium plugins bundled with that version of the editor. To load a different version of a premium plugin, append the name of the plugin and the version to load as query parameters. The version must match one of the versions listed in the `+Supported Versions+` link for the relevant plugin.
-
-Combine multiple plugin specifications using `+&+` in your query string. For example, to load:
-
-* mentions v3.0
-* powerpaste v6.0
-* all other premium plugins from those bundled with `{productmajorversion}`
-
-Append `+?mentions=3.0&powerpaste=6.0+`, such as:
-
-[source,html,subs="attributes+"]
-----
-<script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/{productmajorversion}/tinymce.min.js?mentions=3.0&powerpaste=6.0" referrerpolicy="origin"></script>
-----
-
-=== Specifying a self-hosted deployment of features/plugins
-
-When deploying xref:features-only.adoc[only premium plugins from {cloudname}], some features are served from {cloudname} and some features served from a self-hosted installation. There are two ways to achieve this: `+plugins.min.js+` and `+cloud-plugins.min.js+`.
-
-==== plugins.min.js
-
-Instead of loading `+tinymce.min.js+` from {cloudname}, serve {productname} from a self-hosted server, and load `+plugins.min.js+` from {cloudname}. {productname} which will attempt to load every *premium* plugin from {cloudname}, unless the version of the plugin is specified as the special version `+sdk+`. The query string for `+plugins.min.js+` works the same way as `+tinymce.min.js+`, except for the addition of `+sdk+`. For example, this script tag:
-
-The following example:
-
-* Assumes {productname} has already been loaded by another script on the page.
-* Attempts to load `+mentions+` `+v3.0+` and `+powerpaste+` `+v6.0+` from {cloudname}.
-* Attempts to load `+advcode+` from the self-hosted installation.
-* Attempts to load all other premium plugins from those bundled with version `{productmajorversion}` of {productname}.
-
-[source,html,subs="attributes+"]
-----
-<script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/{productmajorversion}/plugins.min.js?mentions=3.0&powerpaste=6.0&advcode=sdk" referrerpolicy="origin"></script>
-----
-
-The disadvantage of `+plugins.min.js+`: to load only one plugin from the {cloudname} and the rest from a self-hosted deployment, *ALL* other plugins need to be added as query parameter with the version as `+sdk+`. When {cloudname} releases a new plugin, this will need to be updated. In situations where most premium plugins need to be loaded from a self-hosted deployment, use `+cloud-plugins.min.js+`.
-
-==== cloud-plugins.min.js
-
-Instead of loading `+tinymce.min.js+` from {cloudname}, serve {productname} from a self-hosted server, and load `+cloud-plugins.min.js+` from {cloudname}. Unlike `+plugins.min.js+`, `+cloud-plugins.min.js+` defaults to loading every *premium* plugin from the *self-hosted {productname} installation*, not {cloudname}. However, plugins can be loaded from {cloudname} by specifying them as query parameters.
-
-With `+cloud-plugins.min.js+`, the plugins listed in the query strings do not require a version. If there is no version specified, {productname} uses the version bundled with the {productname} version requested. There is also no need to specify `+sdk+` as the version for any plugin, as that is the default.
-
-The following example:
-
-* Assumes {productname} has already been loaded by another script on the page.
-* Attempts to load `+mentions+` `+v3.0+` and `+powerpaste+` `+v6.0+` from {cloudname}.
-* Attempts to load `+advcode+` from the version bundled with version `{productmajorversion}` of {productname} because it doesn't specify a version.
-* Attempts to load all other premium plugins from the self-hosted installation.
-
-[source,html,subs="attributes+"]
-----
-<script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/{productmajorversion}/cloud-plugins.min.js?mentions=3.0&powerpaste=6.0&advcode" referrerpolicy="origin"></script>
-----
-
-The disadvantage of `+cloud-plugins.min.js+`: every plugin to be loaded from {cloudname} must be added to the query parameter. When {cloudname} releases a new plugin, this will need to be updated. In situations where most premium plugins need to be loaded from {cloudname}, use `+plugins.min.js+`.
