--- a/modules/ROOT/pages/editor-plugin-version.adoc
+++ b/modules/ROOT/pages/editor-plugin-version.adoc
@@ -20,8 +20,8 @@ Replace 'no-api-key' with your own API key. This URL ensures the most recent and
 
 For more details, check out the xref:editor-and-features.adoc[{productname} editor via {cloudname}].
 
-[[specifying-a-self-hosted-deployment-of-plugins]]
-== Specifying a Self-Hosted Deployment of plugins
+[[specifying-the-cloud-deployment-of-plugins]]
+== Specifying the Cloud Deployment of plugins
 
 When deploying {productname}, integrators have the choice to **self-host** premium plugins or load them from {companyname} Cloud which is referred to as Hybrid mode. Depending on your setup, a combination of both approaches can be used. For simplifying this process, {companyname} offers two configuration scripts:
 
