DOC-2417: Fix domain link and add closing parenthesis.

--- a/modules/ROOT/pages/usage-based-billing.adoc
+++ b/modules/ROOT/pages/usage-based-billing.adoc
@@ -55,7 +55,7 @@ All Admin users can check their usage data for the past six months in the {produ
 If your editor loads are consistently exceeding your plan limit, we suggest upgrading your plan to minimize costs. You can review the cost of link:https://www.tiny.cloud/pricing/[upgrading to a higher plan] at any time and can upgrade in the Billing Portal to immediately receive a higher editor load limit and new capabilities.
 
 [NOTE]
-We recommend that the email address associated with your plan is linked to either a group alias, IT, or administrator address that will remain valid over time (e.g.  link:http://example.com/[http://example.com/]. By doing so, you'll avoid any disruption of {productname} in your project or application in the event of organizational or staff changes.
+We recommend that the email address associated with your plan is linked to either a group alias, IT, or administrator address that will remain valid over time (e.g. accounts@example.com). By doing so, you'll avoid any disruption of {productname} in your project or application in the event of organizational or staff changes.
 
 === How are editor loads counted during the free 14-day trial period? 
 
