--- a/modules/ROOT/pages/editor-plugin-version.adoc
+++ b/modules/ROOT/pages/editor-plugin-version.adoc
@@ -1,6 +1,6 @@
 = Specify editor & plugins
-:description_short: Specifying editor version and plugins for Tiny Cloud deployments.
-:description: Instructions on setting the TinyMCE editor version and plugins for Tiny Cloud deployments.
+:description_short: Specifying editor version and plugins for {cloudname} deployments.
+:description: Instructions on setting the {productname} editor version and plugins for {cloudname} deployments.
 :keywords: tinymce, cloud, script, textarea, apiKey, hybrid
 
 [[specifying-the-tinymce-editor-version-deployed-from-cloud]]
