DOC-2411: Add TINY-10885 release note entry (#3286)
* DOC-2411: Add TINY-10885 release note entry

* Update modules/ROOT/pages/7.1.1-release-notes.adoc

Co-authored-by: Karl Kemister-Sheppard <karlkemistersheppard@gmail.com>

---------

Co-authored-by: Karl Kemister-Sheppard <karlkemistersheppard@gmail.com>

--- a/modules/ROOT/pages/7.1.1-release-notes.adoc
+++ b/modules/ROOT/pages/7.1.1-release-notes.adoc
@@ -206,6 +206,13 @@ As a result, emoji's now render in all occasion without redirecting.
 
 For more information about these changes, see xref:emoticons.adoc#emoticons_images_url[Emoticons#emoticons_images_url].
 
+=== Insert/Edit image dialog lost focus after the image upload completed.
+// #TINY-10885
+
+Previously, when using the {productname} editor's `Insert/Edit Image` dialog and uploading an image from the 'Upload' tab, the focus would move outside of the dialog after the image was successfully uploaded. As a consequence, users were unable to navigate within the dialog using the tab key.
+
+In {productname} {release-version}, this issue has been addressed. Now, the focus remains inside the `Insert/Edit Image` dialog after uploading an image, allowing users to navigate within the dialog using the keyboard as expected.
+
 
 [[security-fixes]]
 == Security fixes
